main section for location is done except buttons

--- a/src/components/layouts/Main.css
+++ b/src/components/layouts/Main.css
@@ -1,6 +1,6 @@
 .main {
-  background-color: #c1ece4;
+  background-color: #e9f5f8;
   width: 85%;
   padding: 20px;
-  height: calc(100vh - 60px);
+  height: 100vh;
 }
